<?xml version="1.0" encoding="utf-8"?>
<!-- widget cell on Samsung Galaxy S4: 84dp x 105dp -->
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layoutRoot"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/widget_margin"
	android:background="#66ffffff"
	>
	<RelativeLayout
		android:id="@+id/angle_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		>
		<TextView
			android:id="@+id/angle_aligner"
			style="@style/WidgetFont.Primary.Big"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:text="@string/angle_max"
			>
			<!-- This element exists solely for alignment, because the ImageView needs something to align to -->
		</TextView>
		<ImageView
			android:id="@+id/angle_background"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/angle_aligner"
			android:layout_alignLeft="@id/angle_aligner"
			android:layout_alignRight="@id/angle_aligner"
			android:layout_alignTop="@id/angle_aligner"
			android:src="@drawable/day"
			android:contentDescription="Image representing time of day"
			android:scaleType="fitXY"
			>
		</ImageView>
		<TextView
			android:id="@+id/angle"
			style="@style/WidgetFont.Primary.Big"
			android:layout_marginTop="5dp"
			android:layout_alignBottom="@id/angle_aligner"
			android:layout_alignTop="@id/angle_aligner"
			android:layout_centerHorizontal="true"
			android:text="@string/angle_max"
			/>
		<TextView
			android:id="@+id/angleFraction"
			style="@style/WidgetFont.Extra"
			android:layout_marginRight="2dp"
			android:layout_alignBottom="@id/angle_aligner"
			android:layout_alignParentRight="true"
			android:text="@string/demo_text_angle_fraction"
			/>
		<TextView
			android:id="@+id/timeUpdated"
			style="@style/WidgetFont.Secondary.Small"
			android:layout_width="match_parent"
			android:paddingTop="-4dp"
			android:layout_alignParentLeft="true"
			android:layout_alignTop="@id/angle_aligner"
			android:text="@string/time_3_min"
			android:gravity="center_horizontal"
			/>
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/threshold_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		>
		<TextView
			android:id="@+id/timeThresholdFrom"
			style="@style/WidgetFont.Primary.Small"
			android:layout_marginRight="2dp"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:text="@string/time_2_min"
			/>
		<TextView
			android:id="@+id/timeThresholdTo"
			style="@style/WidgetFont.Primary.Small"
			android:layout_marginTop="-4dp"
			android:layout_marginRight="2dp"
			android:layout_alignParentRight="true"
			android:layout_below="@id/timeThresholdFrom"
			android:text="@string/time_2_max"
			/>
		<TextView
			android:id="@+id/threshold"
			style="@style/WidgetFont.Secondary.Big"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="-4dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:layout_toLeftOf="@id/timeThresholdFrom"
			android:text="@string/angle_max"
			android:gravity="center_horizontal"
			/>
		<TextView
			android:id="@+id/thresholdRelation"
			style="@style/WidgetFont.Secondary.Small"
			android:layout_alignParentLeft="true"
			android:layout_below="@id/threshold"
			android:layout_toLeftOf="@id/timeThresholdTo"
			android:text="@string/threshold_relation_above"
			android:gravity="center_horizontal"
			/>
	</RelativeLayout>
	<TextView
		android:id="@+id/state"
		style="@style/WidgetFont.Extra"
		android:layout_above="@id/threshold_container"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_below="@id/angle_container"
		android:text="@string/light_state_twilight_astronomical"
		android:gravity="center_horizontal|center_vertical"
		/>
</RelativeLayout>
